--- a/src/main/resources/com/example/demo/employee.fxml
+++ b/src/main/resources/com/example/demo/employee.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="585.0" prefWidth="876.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.dashboardController">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="585.0" prefWidth="876.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <BorderPane prefHeight="200.0" prefWidth="200.0">
          <left>
@@ -160,7 +160,7 @@
                               <VBox prefHeight="51.0" prefWidth="222.0">
                                  <children>
                                     <Label text="Unit" />
-                                    <ComboBox fx:id="unit" prefWidth="150.0" styleClass="lighter" stylesheets="@../../../styles/design.css" />
+                                    <ComboBox prefWidth="150.0" styleClass="lighter" stylesheets="@../../../styles/design.css" />
                                  </children>
                                  <padding>
                                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -278,10 +278,10 @@
                            </VBox.margin>
                         </Label>
                         <TableView editable="true" prefHeight="328.0" prefWidth="424.0">
-                          <columns>
-                            <TableColumn prefWidth="345.1111145019531" text="Unit" />
-                            <TableColumn prefWidth="96.22225952148438" text="#" />
-                          </columns>
+                           <columns>
+                              <TableColumn prefWidth="345.1111145019531" text="Unit" />
+                              <TableColumn prefWidth="96.22225952148438" text="#" />
+                           </columns>
                            <columnResizePolicy>
                               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                            </columnResizePolicy>
