--- a/src/main/resources/com/example/demo/stocks.fxml
+++ b/src/main/resources/com/example/demo/stocks.fxml
@@ -1,14 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 
-<AnchorPane fx:id="employeeBp" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="585.3334" prefWidth="706.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="employeeBp" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="585.3334" prefWidth="706.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.stocksController">
    <children>
-      <BorderPane prefHeight="585.3" prefWidth="876.0">
-         <top>
-            <Label prefHeight="177.0" prefWidth="331.0" text="STOCKS PAGE" BorderPane.alignment="CENTER" />
-         </top>
+      <BorderPane prefHeight="585.0" prefWidth="706.0">
+         <center>
+            <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Label layoutX="61.0" layoutY="271.0" text="Add Stocks" />
+                  <Label layoutX="62.0" layoutY="52.0" text="Inventory table" />
+                  <TableView fx:id="inventoryTable" layoutX="61.0" layoutY="70.0" prefHeight="200.0" prefWidth="583.0">
+                    <columns>
+                      <TableColumn fx:id="col_InventoryID" prefWidth="160.00000762939453" text="Inventory Id" />
+                        <TableColumn fx:id="col_unitCode" prefWidth="122.4000244140625" text="Unit Name(Code)" />
+                        <TableColumn fx:id="col_unitName" prefWidth="75.0" text="Unit Name" />
+                        <TableColumn fx:id="col_Qty" prefWidth="75.0" text="Qty" />
+                    </columns>
+                  </TableView>
+                  <TextField layoutX="494.0" layoutY="39.0" promptText="Search" />
+                  <TextField fx:id="input_Qty" layoutX="61.0" layoutY="293.0" />
+                  <Button fx:id="updateQtyButton" layoutX="221.0" layoutY="293.0" mnemonicParsing="false" text="Update" />
+               </children>
+            </AnchorPane>
+         </center>
       </BorderPane>
    </children>
 </AnchorPane>
