--- a/src/main/resources/com/example/demo/employee.fxml
+++ b/src/main/resources/com/example/demo/employee.fxml
@@ -1,14 +1,151 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="employeeBp" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="585.3334" prefWidth="706.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="employeeBp" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="585.3334" prefWidth="706.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.employeeController">
    <children>
-      <BorderPane prefHeight="585.3" prefWidth="876.0">
-         <top>
-            <Label prefHeight="177.0" prefWidth="331.0" text="EMPLOYEE PAGE" BorderPane.alignment="CENTER" />
-         </top>
+      <BorderPane prefHeight="585.0" prefWidth="706.0" style="-fx-background-color: #F0F4EE;">
+         <right>
+            <BorderPane fx:id="empDetails" prefHeight="525.0" prefWidth="255.0" style="-fx-background-color: #F0F4EE;" BorderPane.alignment="CENTER">
+               <center>
+                  <VBox fx:id="chosenEmpFrame" alignment="BOTTOM_CENTER" prefHeight="364.0" prefWidth="255.0" style="-fx-background-color: #F0F4EE;" BorderPane.alignment="CENTER">
+                     <children>
+                        <VBox fx:id="chosenEmp" alignment="CENTER" prefHeight="208.0" prefWidth="225.0" spacing="5.0" styleClass="card" stylesheets="@../../../styles/design.css">
+                           <children>
+                              <HBox alignment="CENTER" prefHeight="29.0" prefWidth="197.0">
+                                 <children>
+                                    <Label prefHeight="29.0" prefWidth="85.0" text="ID:" textFill="WHITE">
+                                       <font>
+                                          <Font name="AdobeGothicStd-Bold" size="18.0" />
+                                       </font>
+                                       <HBox.margin>
+                                          <Insets left="10.0" />
+                                       </HBox.margin>
+                                    </Label>
+                                    <Label fx:id="employeeID" prefHeight="29.0" prefWidth="71.0" text="0000" textFill="WHITE">
+                                       <font>
+                                          <Font name="Arial Bold" size="18.0" />
+                                       </font>
+                                    </Label>
+                                 </children>
+                                 <VBox.margin>
+                                    <Insets top="10.0" />
+                                 </VBox.margin>
+                              </HBox>
+                              <ImageView fx:id="empImg" fitHeight="127.0" fitWidth="153.0" pickOnBounds="true" preserveRatio="true" />
+                              <Label fx:id="empName" alignment="CENTER" contentDisplay="CENTER" prefHeight="29.0" prefWidth="85.0" text="NAME" textAlignment="CENTER" textFill="WHITE">
+                                 <font>
+                                    <Font name="AdobeGothicStd-Bold" size="18.0" />
+                                 </font>
+                              </Label>
+                              <HBox alignment="CENTER_LEFT" prefHeight="43.0" prefWidth="197.0" />
+                           </children>
+                           <VBox.margin>
+                              <Insets bottom="20.0" left="15.0" right="15.0" top="20.0" />
+                           </VBox.margin>
+                        </VBox>
+                     </children>
+                  </VBox>
+               </center>
+               <bottom>
+                  <VBox alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="228.0" prefWidth="255.0" spacing="10.0" BorderPane.alignment="CENTER">
+                     <children>
+                        <Button fx:id="addEmp" mnemonicParsing="false" prefHeight="25.0" prefWidth="202.0" style="-fx-background-radius: 5px;" styleClass="darkGreen" stylesheets="@../../../styles/design.css" text="ADD" textFill="WHITE">
+                           <font>
+                              <Font name="Arial Bold" size="12.0" />
+                           </font>
+                        </Button>
+                        <Button fx:id="editEmp" mnemonicParsing="false" prefHeight="25.0" prefWidth="202.0" style="-fx-background-radius: 5px;" styleClass="darkGreen" stylesheets="@../../../styles/design.css" text="EDIT" textFill="WHITE">
+                           <font>
+                              <Font name="Arial Bold" size="12.0" />
+                           </font>
+                        </Button>
+                        <Button fx:id="deleteEmp" mnemonicParsing="false"  prefHeight="25.0" prefWidth="202.0" styleClass="card" stylesheets="@../../../styles/design.css" text="DELETE" textFill="WHITE">
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font>
+                        </Button>
+                        <Button fx:id="saveEmp" layoutX="37.0" layoutY="86.0" mnemonicParsing="false"  prefHeight="25.0" prefWidth="202.0" styleClass="card" stylesheets="@../../../styles/design.css" text="SAVE" textFill="WHITE">
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font>
+                        </Button>
+                        <Button fx:id="cancelEmp" layoutX="37.0" layoutY="121.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="202.0" styleClass="card" stylesheets="@../../../styles/design.css" text="CANCEL" textFill="WHITE">
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font>
+                        </Button>
+                     </children>
+                     <padding>
+                        <Insets top="5.0" />
+                     </padding>
+                     <BorderPane.margin>
+                        <Insets bottom="15.0" />
+                     </BorderPane.margin>
+                  </VBox>
+               </bottom>
+            </BorderPane>
+         </right>
+         <center>
+            <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="585.0" prefWidth="286.0" BorderPane.alignment="CENTER">
+               <children>
+                  <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="46.0" prefWidth="248.0">
+                     <children>
+                        <HBox fx:id="e" alignment="CENTER" prefHeight="46.0" prefWidth="429.0" style="-fx-background-color: #CBDFC1;" styleClass="card" stylesheets="@../../../styles/design.css">
+                           <children>
+                              <TextField fx:id="searchText" prefHeight="25.0" prefWidth="311.0" promptText="Type here to search" style="-fx-background-color: transparent;" />
+                              <Button fx:id="searchEmp" mnemonicParsing="false"  prefHeight="25.0" prefWidth="99.0" style="-fx-background-radius: 10px;" styleClass="card" stylesheets="@../../../styles/design.css" text="Search" textFill="WHITE">
+                                 <HBox.margin>
+                                    <Insets bottom="5.0" right="5.0" top="5.0" />
+                                 </HBox.margin>
+                                 <font>
+                                    <Font name="System Bold" size="13.0" />
+                                 </font>
+                              </Button>
+                           </children>
+                           <opaqueInsets>
+                              <Insets />
+                           </opaqueInsets>
+                        </HBox>
+                     </children>
+                     <VBox.margin>
+                        <Insets bottom="10.0" top="10.0" />
+                     </VBox.margin>
+                  </HBox>
+                  <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="487.0" prefWidth="613.0">
+                     <children>
+                        <ScrollPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="487.0" prefWidth="515.0">
+                           <content>
+                              <GridPane fx:id="grid" prefHeight="8.0" prefWidth="26.0">
+                                 <rowConstraints>
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" />
+                                 </rowConstraints>
+                              </GridPane>
+                           </content>
+                           <HBox.margin>
+                              <Insets left="10.0" right="10.0" />
+                           </HBox.margin>
+                        </ScrollPane>
+                     </children>
+                     <VBox.margin>
+                        <Insets top="10.0" />
+                     </VBox.margin>
+                  </HBox>
+               </children>
+            </VBox>
+         </center>
       </BorderPane>
    </children>
 </AnchorPane>
