--- a/src/main/resources/com/example/demo/stocks.fxml
+++ b/src/main/resources/com/example/demo/stocks.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -14,19 +15,22 @@
          <center>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                <children>
-                  <Label layoutX="61.0" layoutY="271.0" text="Add Stocks" />
+                  <Label layoutX="61.0" layoutY="275.0" text="Add unit to add" />
                   <Label layoutX="62.0" layoutY="52.0" text="Inventory table" />
                   <TableView fx:id="inventoryTable" layoutX="61.0" layoutY="70.0" prefHeight="200.0" prefWidth="583.0">
                     <columns>
                       <TableColumn fx:id="col_InventoryID" prefWidth="160.00000762939453" text="Inventory Id" />
                         <TableColumn fx:id="col_unitCode" prefWidth="122.4000244140625" text="Unit Name(Code)" />
-                        <TableColumn fx:id="col_unitName" prefWidth="75.0" text="Unit Name" />
-                        <TableColumn fx:id="col_Qty" prefWidth="75.0" text="Qty" />
+                        <TableColumn fx:id="col_unitName" prefWidth="97.60003662109375" text="Unit Name" />
+                        <TableColumn fx:id="col_Qty" prefWidth="119.19992065429688" text="Current Stock" />
                     </columns>
                   </TableView>
                   <TextField layoutX="494.0" layoutY="39.0" promptText="Search" />
-                  <TextField fx:id="input_Qty" layoutX="61.0" layoutY="293.0" />
-                  <Button fx:id="updateQtyButton" layoutX="221.0" layoutY="293.0" mnemonicParsing="false" text="Update" />
+                  <TextField fx:id="input_Qty" layoutX="438.0" layoutY="293.0" prefHeight="26.0" prefWidth="123.0" />
+                  <Button fx:id="updateQtyButton" layoutX="588.0" layoutY="293.0" mnemonicParsing="false" text="Update" />
+                  <ComboBox fx:id="input_name" layoutX="61.0" layoutY="293.0" prefHeight="26.0" prefWidth="241.0" />
+                  <Label layoutX="438.0" layoutY="275.0" text="Add stock" />
+                  <Button fx:id="addToInventoryButton" layoutX="62.0" layoutY="332.0" mnemonicParsing="false" text="Add to Inventory" />
                </children>
             </AnchorPane>
          </center>
